# AutosSeguros

./: .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  app.py  brands.json  pyproject.toml  requirements.txt
static/: style.css
templates/: export.html  index.html  results.html
